# pi-pico-bare-metal

./: .gitignore  CMakeLists.txt  LICENSE  build_all  build_elf  uart_listen
cmake/: toolchain.cmake
docs/: armclang_predefined_macros.txt
examples/: CMakeLists.txt  main.cpp
examples/basic_example/: CMakeLists.txt  main.cpp
examples/blink_gpio_hal_timer/: CMakeLists.txt  main.cpp
examples/blink_registers_timer/: CMakeLists.txt  main.cpp
examples/uart_registers/: CMakeLists.txt  main.cpp
include/: pico.hpp  registers.hpp  rp2040_constants.hpp  rp2040_hal.hpp  rp2040_registers.hpp
libs/: CMakeLists.txt
libs/CMSIS/: core_cm0plus.h  rp2040_cmsis.h
linker/: rp2040_linker_script.ld  rp2040_register_sections.ld
scripts/: add_crc_to_elf.py  openocd_sudo
scripts/add_crc/: .gitignore  Makefile  README.md  bin2uf2.c
scripts/debug/: openocd.sh
scripts/elf2uf2/: .gitignore  README.md  compile_elf2uf2.sh  main.cpp
src/: CMakeLists.txt  libc_stubs.hpp  rp2040_startup.cpp  rp2040_vector_table.cpp  rp2040_vector_table.hpp
src/hardware_abstraction_layer/gpio/: gpio.cpp  gpio.hpp
src/pico/: system_definitions.hpp
src/registers/: clocks.hpp  definitions.cpp  io.hpp  nvic.hpp  pads.hpp  pll.hpp  qspi.hpp  resets.hpp  rtc.hpp  sio.hpp  ssi.hpp  timer.hpp  uart.hpp  watchdog.hpp  xip.hpp  xosc.hpp
src/rp2040/: rp2040_registers.cpp  rp2040_registers.hpp  rp2040_startup.cpp  rp2040_vector_table.cpp
